# newsforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_multi_category.py  003_consumers_webhooks.py  004_search_indexes.py  005_events_history.py  006_llm_providers.py  007_timestamptz.py  008_provider_extra_params.py  009_add_full_text.py  010_llm_profiles.py  011_profile_timeout_retry.py  012_story_clustering.py  013_remove_story_hint.py  014_fix_story_embedding_dim.py  015_merge_events_into_stories.py  016_add_translation_fields.py  017_add_finance_metadata_gin_index.py  018_add_source_name.py  019_extend_external_id.py  020_system_settings.py  021_semantic_dedup_event_group.py  022_story_refresh_tracking.py  023_watched_symbols.py  024_watched_symbols_per_consumer.py
backend/app/: main.py  run_scheduler.py
backend/app/content/: fetcher.py
backend/app/core/: auth.py  config.py  secrets.py
backend/app/db/: database.py  redis.py
backend/app/models/: __init__.py  agent_llm_config.py  api_consumer.py  article.py  bookmark.py  category.py  embedding.py  feed.py  llm_profile.py  llm_provider.py  news_event.py  news_story.py  pipeline_event.py  reading_history.py  source.py  subscription.py  system_setting.py  user.py  watched_symbol.py  webhook.py
backend/app/pipeline/: agent_db_writer.py  (+9 more)
backend/config/: pipeline.yml
backend/tests/: conftest.py  test_circuit_breaker.py  test_sentiment_ml_batch.py
(+152 files in other folders)
